<resources>
    <string name="app_name">Legend Zone</string>
    <string name="sign_up_log_in">Sign Up/Log In</string>
    <string name="browse_services">Browse Services</string>
    <string name="please_sign_up_to_continue_and_be_aware_nof_all_options">Please sign up to continue and be aware \nof all options.</string>
    <string name="please_enter_your_phone_number_">Please enter your phone number to verify.</string>
    <string name="insert_your_phone_number_to_get_verification_code">Enter phone number to get verification code.</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="verify">Verify</string>
    <string name="we_will_send_a_6_digit_code_to_verify_nyour_number">We will send a 6 digit-code to verify\nyour number.</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="name">Name</string>
    <string name="fill_out_this_form">Fill out this form</string>
    <string name="please_complete_your_information">Please complete your information</string>
    <string name="_continue">Continue</string>
    <string name="add_your_car">Add Your Car</string>
    <string name="please_select_your_car_and_nits_model">Please Select Your Car And\nIts Model</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="service">Service</string>
    <string name="bookings">Bookings</string>
    <string name="support">Support</string>
    <string name="account">Account</string>
    <string name="your_account_details_and_other_noptions">Your Account Details And Other\nOptions</string>
    <string name="my_account">My Account</string>
    <string name="account_settings">Account Settings</string>
    <string name="my_address">My Address</string>
    <string name="logout">Logout</string>
    <string name="privacy_and_policy">Privacy And Policy</string>
    <string name="about_us">About Us</string>
    <string name="add_my_car">Add my Car</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="personal_details">Personal Details</string>
    <string name="search_for_services">Search for Services</string>
    <string name="pick_by_service">Pick by Service</string>
    <string name="select_service">Select Service</string>
    <string name="please_select_your_preferred_nservice_type">Please Select Your Preferred\nService Type</string>
    <string name="please_select_your_preferred_nservice_location">Please Select Your Preferred\nService Location</string>
    <string name="service_type">Service Type</string>
    <string name="or">OR</string>
    <string name="address">Address</string>
    <string name="enter_your_pincode">Enter your Pincode</string>
    <string name="pincode">Pincode</string>
    <string name="city">City</string>
    <string name="Area">Area</string>
    <string name="enter_our_area">Enter our Area</string>
    <string name="proceed">Proceed</string>
    <string name="issue_don_t_worry_here_some_of_the_faq_s">Issue! Don\'t Worry Here Some Of The FAQ\'s</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="my_bookings">My Bookings</string>
    <string name="your_active_and_past_bookings_are_nlisted_below">Your Active and Past Bookings Are\nListed Below</string>
    <string name="your_in_store_service_schedule_have_nbeen_booked_successfully">Your In Store Service Schedule Have\nBeen Booked Successfully</string>
    <string name="booked_successfully">Booked Successfully</string>
    <string name="standard_service_battery_checkup"><![CDATA[Standard Service & Battery checkup]]></string>
    <string name="view_details">View details</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="heading1">Bet with Confidence!</string>
    <string name="heading2">Peer-to-Peer Betting!</string>
    <string name="heading3">Earn Comission</string>
    <string name="desc1">Enjoy the confidence of knowing your bets \nare 100% safe and secure with\n gauranteed payouts.</string>
    <string name="desc2">Bet against friends, family, and other users \nin our peer-to-peer betting.\</string>
    <string name="desc3">Refer your friends and and family to earn \ncommision on the bets they make.</string>
    <string name="enter_your_phone_number">Your Phone Number</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="skip">Skip</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="please_enter_otp">Please Enter Valid Otp</string>
    <string name="please_enter_valid_otp">Please Enter Valid Otp</string>
    <string name="resend">Resend</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="enter_your_mobile_number_to_send_the_otp">Enter your registered phone number\nto send &amp; verify OTP</string>
    <string name="remembered_your_password">Remembered your password?</string>
    <string name="your_new_password_must_be_different_nfrom_previous_used_passwords">Your new password must be different\nfrom previous used passwords</string>
    <string name="create_new_password">Create New Password</string>
    <string name="send">Send</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save">Save</string>
    <string name="forget_password">Forget Password?</string>
    <string name="select_your_state">State</string>
    <string name="please_select_your_state">Please select your state</string>
    <string name="select_your_city">City</string>
    <string name="please_select_your_city">Please select your city</string>
    <string name="sign_in_continue">Sign in to continue</string>
    <string name="send_otp">Send OTP</string>
    <string name="profile">Profile</string>
    <string name="rewards">Rewards</string>
    <string name="wallet">Wallet</string>
    <string name="bets">Bets</string>
    <string name="checkout_consent">Any transaction may take upto 24 hours. Please contact the support if any issue occurs.</string>
</resources>