<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.OTPVerificationActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:text="@string/verify_your_number"
        android:textColor="@color/primary"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/we_will_send_a_6_digit_code_to_verify_nyour_number"
        android:textColor="@color/primary"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/primary"
        app:bar_enabled="false"
        app:box_margin="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:height="50dp"
        app:length="6"
        app:otp_box_background_success="@drawable/edittext_bg_rounded_success"
        app:otp_box_background_error="@drawable/edittext_bg_rounded_error"
        app:otp_box_background_active="@drawable/edittext_bg_rounded_active"
        app:otp_box_background_inactive="@drawable/edittext_bg_rounded_inactive"
        app:otp_text_size="@dimen/_21sdp"
        app:width="50dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>




    <TextView
        android:id="@+id/resendOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/primary"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/round_corner8"
        android:backgroundTint="@color/primary"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingVertical="@dimen/_14sdp"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@+id/resendOtp"
        tools:layout_editor_absoluteX="16dp" />
    <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btnBack"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_12sdp"
    android:layout_marginTop="@dimen/_15sdp"
    android:background="@drawable/border_primary8"
    android:minWidth="0dp"
    android:minHeight="0dp"
    android:paddingVertical="@dimen/_13sdp"
    android:text="Edit Phone Number"
    android:textAllCaps="false"
    android:textColor="@color/primary"
    android:textSize="@dimen/_13ssp"
    app:layout_constraintTop_toBottomOf="@+id/btnVerify" />
</androidx.constraintlayout.widget.ConstraintLayout>