<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.UpdateProfileActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/fill_out_this_form"
        android:textColor="@color/primary"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">


        <ImageView
            android:id="@+id/ivUserBg"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:background="@drawable/round_bg"
            android:backgroundTint="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivProfile"
            android:layout_width="@dimen/_72sdp"
            android:layout_height="@dimen/_72sdp"
            android:background="@drawable/round_bg"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_person_24"
            app:layout_constraintBottom_toBottomOf="@+id/ivUserBg"
            app:layout_constraintEnd_toEndOf="@+id/ivUserBg"
            app:layout_constraintStart_toStartOf="@+id/ivUserBg"
            app:layout_constraintTop_toTopOf="@+id/ivUserBg"
            app:shapeAppearanceOverlay="@style/circleImageView" />

        <ImageView
            android:id="@+id/selectImage"
            android:layout_width="@dimen/_21sdp"
            android:layout_height="@dimen/_21sdp"
            android:src="@drawable/baseline_edit_24"
            app:tint="@color/gray"
            android:background="@drawable/circle_bg"
            android:backgroundTint="@color/primary"
            android:padding="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="@+id/ivUserBg"
            app:layout_constraintEnd_toEndOf="@+id/ivUserBg"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/please_complete_your_information"
        android:textColor="@color/primary"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNameContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/profImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etAgeContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="Age"
        app:layout_constraintTop_toBottomOf="@+id/etNameContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmailContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="Email"
        app:layout_constraintTop_toBottomOf="@+id/etAgeContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPincodeContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="@string/pincode"
        app:layout_constraintTop_toBottomOf="@+id/etEmailContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etreferralIdContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="Refferal Code"
        app:layout_constraintTop_toBottomOf="@+id/etPincodeContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etreferralId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/round_corner20"
        android:backgroundTint="@color/primary"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingVertical="@dimen/_14sdp"
        android:text="Submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@+id/etreferralIdContainer"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>